# py-template

./: .gitignore  .pre-commit-config.yaml  README.md  init_project.py  pyproject.toml  pytest.ini  requirements.in
.github/workflows/: code-quality.yml  lint.yml  tests.yml
package_name/: example.py
tests/: test_example.py
