###### Black Config ######
[tool.black]
line-length = 120

###### Ruff Config ######
[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
# Ignore line-length, this is handled by black
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Defines lowerbound of supported python versions
target-version = "py310"

###### Poetry Project Config ######

[tool.poetry]
name = "package-name"
version = "0.1.0"
description = ""
authors = [
#    "Author Name <author-email@domain.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"

[tool.poetry.group.dev.dependencies]
pip-tools = "^7.3.0"
pre-commit = "^3.6.0"
ruff = "^0.1.8"
black = "^23.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"